--- a/ParcelFabricCurveByInference/ParcelFabricCurveByInference.csproj
+++ b/ParcelFabricCurveByInference/ParcelFabricCurveByInference.csproj
@@ -107,7 +107,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.Designer.cs">
@@ -116,7 +115,10 @@
     </Compile>
     <Compile Include="CurveByInference.cs" />
     <Compile Include="CurveByInferenceSettings.cs" />
+    <Compile Include="InferredCurve.cs" />
+    <Compile Include="MyProgressor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RelatedCurve.cs" />
   </ItemGroup>
   <ItemGroup>
     <AddInContent Include="Config.esriaddinx">
