--- a/ParcelFabricCurveByInferenceTest/ParcelFabricCurveByInferenceTest.csproj
+++ b/ParcelFabricCurveByInferenceTest/ParcelFabricCurveByInferenceTest.csproj
@@ -68,6 +68,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Development.cs" />
     <Compile Include="Framework.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sanity.cs" />
