More UI Changes
Change is workflow, must find before update, implement filtering on list
view

--- a/ParcelFabricCurveByInference/ParcelFabricCurveByInference.csproj
+++ b/ParcelFabricCurveByInference/ParcelFabricCurveByInference.csproj
@@ -115,6 +115,7 @@
     <Compile Include="CurveByInference.cs" />
     <Compile Include="CurveByInferenceSettings.cs" />
     <Compile Include="InferredCurve.cs" />
+    <Compile Include="ListViewSort.cs" />
     <Compile Include="MyMessageBox.cs" />
     <Compile Include="MyProgressor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
