--- a/ParcelFabricCurveByInferenceTest/ParcelFabricCurveByInferenceTest.csproj
+++ b/ParcelFabricCurveByInferenceTest/ParcelFabricCurveByInferenceTest.csproj
@@ -46,7 +46,7 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="ESRI.ArcGIS.GeoDatabaseExtensions, Version=10.1.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
-      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="ESRI.ArcGIS.System, Version=10.1.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -72,6 +72,7 @@
     <Compile Include="Framework.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sanity.cs" />
+    <Compile Include="Sherwood.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ParcelFabricCurveByInference\ParcelFabricCurveByInference.csproj">
